--- a/src/main/resources/assets/simplemoney/lang/en_us.json
+++ b/src/main/resources/assets/simplemoney/lang/en_us.json
@@ -1,10 +1,11 @@
 {
+    "item.simplemoney.banknote_paper": "Banknote Paper",
     "item.simplemoney.banknote_fiber": "Banknote Fiber",
     "item.simplemoney.banknote_blank": "Banknote Blank",
     "item.simplemoney.fresh_bill": "Fresh Bill",
     "item.simplemoney.money_bill": "Money Bill",
-    "item.simplemoney.enhanced_firework_rocket": "Enhanced Firework Rocket",
 
+    "tooltip.simplemoney.banknote_paper.tooltip": "Paper made from exotic material.",
     "tooltip.simplemoney.banknote_fiber.tooltip": "A crude mixture. Requires intense heat for refinement.",
     "tooltip.simplemoney.banknote_blank.tooltip": "Unprinted, high-quality paper. A crucial chemical agent is missing.",
     "tooltip.simplemoney.fresh_bill.tooltip": "Still damp from the press. Needs exposure to air and time to set its form.",
