rangefinder item almost working

--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -41,7 +41,7 @@
   "message.simplebuilding.pos1_set": "1:",
   "message.simplebuilding.pos2_set": "2:",
 
-  "itemgroup.simplebuilding.rangefinder": "Rangefinder",
+  "item.simplebuilding.rangefinder": "Rangefinder",
 
   "itemgroup.simplebuilding.building_items": "Building Items",
 
