some optimazation, but many things not working new enchasntment

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -2,8 +2,8 @@
   "item.simplebuilding.building_bundle": "Building Bundle",
   "tooltip.simplebuilding.building_bundle.tooltip": "A bundle containing various building materials.",
 
-
   "item.simplebuilding.stone_chisel": "Stone Chisel",
+  "item.simplebuilding.copper_chisel": "Copper Chisel",
   "item.simplebuilding.iron_chisel": "Iron Chisel",
   "item.simplebuilding.gold_chisel": "Gold Chisel",
   "item.simplebuilding.diamond_chisel": "Diamond Chisel",
@@ -12,8 +12,8 @@
   "tooltip.simplebuilding.chisel": "Use to shape blocks.",
   "tooltip.simplebuilding.chisel.shift_down": "Right-click on a transformable block.",
 
-
   "item.simplebuilding.stone_spatula": "Stone Spatula",
+  "item.simplebuilding.copper_spatula": "Copper Spatula",
   "item.simplebuilding.iron_spatula": "Iron Spatula",
   "item.simplebuilding.gold_spatula": "Gold Spatula",
   "item.simplebuilding.diamond_spatula": "Diamond Spatula",
@@ -22,8 +22,46 @@
   "tooltip.simplebuilding.spatula": "Use to smooth blocks.",
   "tooltip.simplebuilding.spatula.shift_down": "Right-click on a transformable block.",
 
-  "itemgroup.simplebuilding.building_items": "Building Items",
+  "item.simplebuilding.copper_building_core": "Copper Building Core",
+  "item.simplebuilding.iron_building_core": "Iron Building Core",
+  "item.simplebuilding.gold_building_core": "Gold Building Core",
+  "item.simplebuilding.diamond_building_core": "Diamond Building Core",
+  "item.simplebuilding.netherite_building_core": "Netherite Building Core",
 
+  "item.simplebuilding.copper_building_wand": "Copper Building Wand",
+  "item.simplebuilding.iron_building_wand": "Iron Building Wand",
+  "item.simplebuilding.gold_building_wand": "Gold Building Wand",
+  "item.simplebuilding.diamond_building_wand": "Diamond Building Wand",
+  "item.simplebuilding.netherite_building_wand": "Netherite Building Wand",
+
+  "tooltip.simplebuilding.building_wand": "Use to place more blocks at once.",
+
+  "message.simplebuilding.set_pos1_first": "1:",
+  "message.simplebuilding.pos1_set": "1:",
+  "message.simplebuilding.pos2_set": "2:",
+
+  "item.simplebuilding.rangefinder": "Rangefinder",
+  "item.simplebuilding.rangefinder_white": "White Rangefinder",
+  "item.simplebuilding.rangefinder_orange": "Orange Rangefinder",
+  "item.simplebuilding.rangefinder_magenta": "Magenta Rangefinder",
+  "item.simplebuilding.rangefinder_light_blue": "Light Blue Rangefinder",
+  "item.simplebuilding.rangefinder_yellow": "Yellow Rangefinder",
+  "item.simplebuilding.rangefinder_lime": "Lime Rangefinder",
+  "item.simplebuilding.rangefinder_pink": "Pink Rangefinder",
+  "item.simplebuilding.rangefinder_gray": "Gray Rangefinder",
+  "item.simplebuilding.rangefinder_light_gray": "Light Gray Rangefinder",
+  "item.simplebuilding.rangefinder_cyan": "Cyan Rangefinder",
+  "item.simplebuilding.rangefinder_purple": "Purple Rangefinder",
+  "item.simplebuilding.rangefinder_blue": "Blue Rangefinder",
+  "item.simplebuilding.rangefinder_brown": "Brown Rangefinder",
+  "item.simplebuilding.rangefinder_green": "Green Rangefinder",
+  "item.simplebuilding.rangefinder_red": "Red Rangefinder",
+  "item.simplebuilding.rangefinder_black": "Black Rangefinder",
+
+  "item.simplebuilding.reinforced_bundle": "Reinforced Bundle",
+  "tooltip.simplebuilding.reinforced_bundle": "Can hold more items if enchanted.",
+
+  "itemgroup.simplebuilding.building_items": "Building Items",
 
   "enchantment.simplebuilding.fast_chiseling": "Fast Chiseling",
   "enchantment.simplebuilding.constructors_touch": "Constructor's Touch",
@@ -33,7 +71,6 @@
   "enchantment.simplebuilding.master_builder": "Master Builder",
   "enchantment.simplebuilding.color_palette": "Color Palette",
 
-  "enchantment.simplebuilding.lightning_striker": "Lightning Striker",
 
   "container.enchantments": "Enchantments",
   "enchantment.level.1": "I",
