--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -40,23 +40,23 @@
   "message.simplebuilding.pos1_set": "1:",
   "message.simplebuilding.pos2_set": "2:",
 
-  "item.simplebuilding.rangefinder": "Rangefinder",
-  "item.simplebuilding.rangefinder_white": "White Rangefinder",
-  "item.simplebuilding.rangefinder_orange": "Orange Rangefinder",
-  "item.simplebuilding.rangefinder_magenta": "Magenta Rangefinder",
-  "item.simplebuilding.rangefinder_light_blue": "Light Blue Rangefinder",
-  "item.simplebuilding.rangefinder_yellow": "Yellow Rangefinder",
-  "item.simplebuilding.rangefinder_lime": "Lime Rangefinder",
-  "item.simplebuilding.rangefinder_pink": "Pink Rangefinder",
-  "item.simplebuilding.rangefinder_gray": "Gray Rangefinder",
-  "item.simplebuilding.rangefinder_light_gray": "Light Gray Rangefinder",
-  "item.simplebuilding.rangefinder_cyan": "Cyan Rangefinder",
-  "item.simplebuilding.rangefinder_purple": "Purple Rangefinder",
-  "item.simplebuilding.rangefinder_blue": "Blue Rangefinder",
-  "item.simplebuilding.rangefinder_brown": "Brown Rangefinder",
-  "item.simplebuilding.rangefinder_green": "Green Rangefinder",
-  "item.simplebuilding.rangefinder_red": "Red Rangefinder",
-  "item.simplebuilding.rangefinder_black": "Black Rangefinder",
+  "item.simplebuilding.rangefinder": "Octant",
+  "item.simplebuilding.rangefinder_white": "White Octant",
+  "item.simplebuilding.rangefinder_orange": "Orange Octant",
+  "item.simplebuilding.rangefinder_magenta": "Magenta Octant",
+  "item.simplebuilding.rangefinder_light_blue": "Light Blue Octant",
+  "item.simplebuilding.rangefinder_yellow": "Yellow Octant",
+  "item.simplebuilding.rangefinder_lime": "Lime Octant",
+  "item.simplebuilding.rangefinder_pink": "Pink Octant",
+  "item.simplebuilding.rangefinder_gray": "Gray Octant",
+  "item.simplebuilding.rangefinder_light_gray": "Light Gray Octant",
+  "item.simplebuilding.rangefinder_cyan": "Cyan Octant",
+  "item.simplebuilding.rangefinder_purple": "Purple Octant",
+  "item.simplebuilding.rangefinder_blue": "Blue Octant",
+  "item.simplebuilding.rangefinder_brown": "Brown Octant",
+  "item.simplebuilding.rangefinder_green": "Green Octant",
+  "item.simplebuilding.rangefinder_red": "Red Octant",
+  "item.simplebuilding.rangefinder_black": "Black Octant",
 
   "item.simplebuilding.reinforced_bundle": "Reinforced Bundle",
     "tooltip.simplebuilding.reinforced_bundle": "Can hold more items if enchanted.",
