some optimization, most things working, bsleadgehammer added, reinforced shulker added

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -34,29 +34,39 @@
   "item.simplebuilding.diamond_building_wand": "Diamond Building Wand",
   "item.simplebuilding.netherite_building_wand": "Netherite Building Wand",
 
+  "item.simplebuilding.sledgehammer": "Sledgehammer",
+  "item.simplebuilding.stone_sledgehammer": "Stone Sledgehammer",
+  "item.simplebuilding.copper_sledgehammer": "Copper Sledgehammer",
+  "item.simplebuilding.iron_sledgehammer": "Iron Sledgehammer",
+  "item.simplebuilding.gold_sledgehammer": "Gold Sledgehammer",
+  "item.simplebuilding.diamond_sledgehammer": "Diamond Sledgehammer",
+  "item.simplebuilding.netherite_sledgehammer": "Netherite Sledgehammer",
+
+  "tooltip.simplebuilding.sledgehammer": "Use to break multiple blocks at once.",
+
   "tooltip.simplebuilding.building_wand": "Use to place more blocks at once.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
   "message.simplebuilding.pos2_set": "2:",
 
-  "item.simplebuilding.rangefinder": "Rangefinder",
-  "item.simplebuilding.rangefinder_white": "White Rangefinder",
-  "item.simplebuilding.rangefinder_orange": "Orange Rangefinder",
-  "item.simplebuilding.rangefinder_magenta": "Magenta Rangefinder",
-  "item.simplebuilding.rangefinder_light_blue": "Light Blue Rangefinder",
-  "item.simplebuilding.rangefinder_yellow": "Yellow Rangefinder",
-  "item.simplebuilding.rangefinder_lime": "Lime Rangefinder",
-  "item.simplebuilding.rangefinder_pink": "Pink Rangefinder",
-  "item.simplebuilding.rangefinder_gray": "Gray Rangefinder",
-  "item.simplebuilding.rangefinder_light_gray": "Light Gray Rangefinder",
-  "item.simplebuilding.rangefinder_cyan": "Cyan Rangefinder",
-  "item.simplebuilding.rangefinder_purple": "Purple Rangefinder",
-  "item.simplebuilding.rangefinder_blue": "Blue Rangefinder",
-  "item.simplebuilding.rangefinder_brown": "Brown Rangefinder",
-  "item.simplebuilding.rangefinder_green": "Green Rangefinder",
-  "item.simplebuilding.rangefinder_red": "Red Rangefinder",
-  "item.simplebuilding.rangefinder_black": "Black Rangefinder",
+  "item.simplebuilding.rangefinder": "Octant",
+  "item.simplebuilding.rangefinder_white": "White Octant",
+  "item.simplebuilding.rangefinder_orange": "Orange Octant",
+  "item.simplebuilding.rangefinder_magenta": "Magenta Octant",
+  "item.simplebuilding.rangefinder_light_blue": "Light Blue Octant",
+  "item.simplebuilding.rangefinder_yellow": "Yellow Octant",
+  "item.simplebuilding.rangefinder_lime": "Lime Octant",
+  "item.simplebuilding.rangefinder_pink": "Pink Octant",
+  "item.simplebuilding.rangefinder_gray": "Gray Octant",
+  "item.simplebuilding.rangefinder_light_gray": "Light Gray Octant",
+  "item.simplebuilding.rangefinder_cyan": "Cyan Octant",
+  "item.simplebuilding.rangefinder_purple": "Purple Octant",
+  "item.simplebuilding.rangefinder_blue": "Blue Octant",
+  "item.simplebuilding.rangefinder_brown": "Brown Octant",
+  "item.simplebuilding.rangefinder_green": "Green Octant",
+  "item.simplebuilding.rangefinder_red": "Red Octant",
+  "item.simplebuilding.rangefinder_black": "Black Octant",
 
   "item.simplebuilding.reinforced_bundle": "Reinforced Bundle",
   "tooltip.simplebuilding.reinforced_bundle": "Can hold more items if enchanted.",
@@ -70,6 +80,7 @@
   "enchantment.simplebuilding.deep_pockets": "Deep Pockets",
   "enchantment.simplebuilding.master_builder": "Master Builder",
   "enchantment.simplebuilding.color_palette": "Color Palette",
+  "enchantment.simplebuilding.funnel": "Item Funnel",
 
 
   "container.enchantments": "Enchantments",
