some clean up, reinforced shulker finally removed, some wand fixes

--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -1,89 +1,102 @@
 {
-  "item.simplebuilding.building_bundle": "Building Bundle",
-  "tooltip.simplebuilding.building_bundle.tooltip": "A bundle containing various building materials.",
+  "item.simplebuilding.building_bundle": "Baubündel",
+  "tooltip.simplebuilding.building_bundle.tooltip": "Ein Bündel, das verschiedene Baumaterialien enthält.",
 
-  "item.simplebuilding.stone_chisel": "Stone Chisel",
-  "item.simplebuilding.copper_chisel": "Copper Chisel",
-  "item.simplebuilding.iron_chisel": "Iron Chisel",
-  "item.simplebuilding.gold_chisel": "Gold Chisel",
-  "item.simplebuilding.diamond_chisel": "Diamond Chisel",
-  "item.simplebuilding.netherite_chisel": "Netherite Chisel",
+  "item.simplebuilding.stone_chisel": "Steinmeißel",
+  "item.simplebuilding.copper_chisel": "Kupfermeißel",
+  "item.simplebuilding.iron_chisel": "Eisenmeißel",
+  "item.simplebuilding.gold_chisel": "Goldmeißel",
+  "item.simplebuilding.diamond_chisel": "Diamantmeißel",
+  "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Use to shape blocks.",
-  "tooltip.simplebuilding.chisel.shift_down": "Right-click on a transformable block.",
+  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
-  "item.simplebuilding.stone_spatula": "Stone Spatula",
-  "item.simplebuilding.copper_spatula": "Copper Spatula",
-  "item.simplebuilding.iron_spatula": "Iron Spatula",
-  "item.simplebuilding.gold_spatula": "Gold Spatula",
-  "item.simplebuilding.diamond_spatula": "Diamond Spatula",
-  "item.simplebuilding.netherite_spatula": "Netherite Spatula",
+  "item.simplebuilding.stone_spatula": "Steinspachtel",
+  "item.simplebuilding.copper_spatula": "Kupferspachtel",
+  "item.simplebuilding.iron_spatula": "Eisenspachtel",
+  "item.simplebuilding.gold_spatula": "Goldspachtel",
+  "item.simplebuilding.diamond_spatula": "Diamantspachtel",
+  "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Use to smooth blocks.",
-  "tooltip.simplebuilding.spatula.shift_down": "Right-click on a transformable block.",
+  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
 
-  "item.simplebuilding.copper_building_core": "Copper Building Core",
-  "item.simplebuilding.iron_building_core": "Iron Building Core",
-  "item.simplebuilding.gold_building_core": "Gold Building Core",
-  "item.simplebuilding.diamond_building_core": "Diamond Building Core",
-  "item.simplebuilding.netherite_building_core": "Netherite Building Core",
+  "item.simplebuilding.copper_building_core": "Kupferbaukern",
+  "item.simplebuilding.iron_building_core": "Eisenbaukern",
+  "item.simplebuilding.gold_building_core": "Goldbaukern",
+  "item.simplebuilding.diamond_building_core": "Diamantbaukern",
+  "item.simplebuilding.netherite_building_core": "Netheritbaukern",
 
-  "item.simplebuilding.copper_building_wand": "Copper Building Wand",
-  "item.simplebuilding.iron_building_wand": "Iron Building Wand",
-  "item.simplebuilding.gold_building_wand": "Gold Building Wand",
-  "item.simplebuilding.diamond_building_wand": "Diamond Building Wand",
-  "item.simplebuilding.netherite_building_wand": "Netherite Building Wand",
+  "item.simplebuilding.copper_building_wand": "Kupferbaustab",
+  "item.simplebuilding.iron_building_wand": "Eisenbaustab",
+  "item.simplebuilding.gold_building_wand": "Goldbaustab",
+  "item.simplebuilding.diamond_building_wand": "Diamantbaustab",
+  "item.simplebuilding.netherite_building_wand": "Netheritbaustab",
+  "tooltip.simplebuilding.building_wand.size": "Platziert eine Fläche von %s x %s Blöcken.",
+  "tooltip.simplebuilding.building_wand.line_size": "Platziert eine Reihe von %s Blöcken.",
 
-  "item.simplebuilding.sledgehammer": "Sledgehammer",
-  "item.simplebuilding.stone_sledgehammer": "Stone Sledgehammer",
-  "item.simplebuilding.copper_sledgehammer": "Copper Sledgehammer",
-  "item.simplebuilding.iron_sledgehammer": "Iron Sledgehammer",
-  "item.simplebuilding.gold_sledgehammer": "Gold Sledgehammer",
-  "item.simplebuilding.diamond_sledgehammer": "Diamond Sledgehammer",
-  "item.simplebuilding.netherite_sledgehammer": "Netherite Sledgehammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Use to break multiple blocks at once.",
+  "item.simplebuilding.sledgehammer": "Vorschlaghammer",
+  "item.simplebuilding.stone_sledgehammer": "Steinvorschlaghammer",
+  "item.simplebuilding.copper_sledgehammer": "Kupfervorschlaghammer",
+  "item.simplebuilding.iron_sledgehammer": "Eisenvorschlaghammer",
+  "item.simplebuilding.gold_sledgehammer": "Goldvorschlaghammer",
+  "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
+  "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
-  "tooltip.simplebuilding.building_wand": "Use to place more blocks at once.",
+  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
+
+  "tooltip.simplebuilding.building_wand": "Benutzen, um mehrere Blöcke auf einmal zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
   "message.simplebuilding.pos2_set": "2:",
 
-  "item.simplebuilding.rangefinder": "Octant",
-  "item.simplebuilding.rangefinder_white": "White Octant",
-  "item.simplebuilding.rangefinder_orange": "Orange Octant",
-  "item.simplebuilding.rangefinder_magenta": "Magenta Octant",
-  "item.simplebuilding.rangefinder_light_blue": "Light Blue Octant",
-  "item.simplebuilding.rangefinder_yellow": "Yellow Octant",
-  "item.simplebuilding.rangefinder_lime": "Lime Octant",
-  "item.simplebuilding.rangefinder_pink": "Pink Octant",
-  "item.simplebuilding.rangefinder_gray": "Gray Octant",
-  "item.simplebuilding.rangefinder_light_gray": "Light Gray Octant",
-  "item.simplebuilding.rangefinder_cyan": "Cyan Octant",
-  "item.simplebuilding.rangefinder_purple": "Purple Octant",
-  "item.simplebuilding.rangefinder_blue": "Blue Octant",
-  "item.simplebuilding.rangefinder_brown": "Brown Octant",
-  "item.simplebuilding.rangefinder_green": "Green Octant",
-  "item.simplebuilding.rangefinder_red": "Red Octant",
-  "item.simplebuilding.rangefinder_black": "Black Octant",
+  "item.simplebuilding.rangefinder": "Oktant",
+  "item.simplebuilding.rangefinder_white": "Weißer Oktant",
+  "item.simplebuilding.rangefinder_orange": "Orangener Oktant",
+  "item.simplebuilding.rangefinder_magenta": "Magenta Oktant",
+  "item.simplebuilding.rangefinder_light_blue": "Hellblauer Oktant",
+  "item.simplebuilding.rangefinder_yellow": "Gelber Oktant",
+  "item.simplebuilding.rangefinder_lime": "Hellgrüner Oktant",
+  "item.simplebuilding.rangefinder_pink": "Rosa Oktant",
+  "item.simplebuilding.rangefinder_gray": "Grauer Oktant",
+  "item.simplebuilding.rangefinder_light_gray": "Hellgrauer Oktant",
+  "item.simplebuilding.rangefinder_cyan": "Türkiser Oktant",
+  "item.simplebuilding.rangefinder_purple": "Violetter Oktant",
+  "item.simplebuilding.rangefinder_blue": "Blauer Oktant",
+  "item.simplebuilding.rangefinder_brown": "Brauner Oktant",
+  "item.simplebuilding.rangefinder_green": "Grüner Oktant",
+  "item.simplebuilding.rangefinder_red": "Roter Oktant",
+  "item.simplebuilding.rangefinder_black": "Schwarzer Oktant",
 
-  "item.simplebuilding.reinforced_bundle": "Reinforced Bundle",
-  "tooltip.simplebuilding.reinforced_bundle": "Can hold more items if enchanted.",
+  "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Gegenstände halten, wenn verzaubert.",
 
-  "itemgroup.simplebuilding.building_items": "Building Items",
+  "item.simplebuilding.reinforced_shulker_box": "Verstärkte Shulker-Kiste",
+  "tooltip.simplebuilding.reinforced_shulker_box": "Kann mehr Gegenstände halten, wenn verzaubert.",
 
-  "enchantment.simplebuilding.fast_chiseling": "Fast Chiseling",
-  "enchantment.simplebuilding.constructors_touch": "Constructor's Touch",
-  "enchantment.simplebuilding.range": "Range",
+  "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
-  "enchantment.simplebuilding.deep_pockets": "Deep Pockets",
-  "enchantment.simplebuilding.master_builder": "Master Builder",
-  "enchantment.simplebuilding.color_palette": "Color Palette",
-  "enchantment.simplebuilding.funnel": "Item Funnel",
+  "enchantment.simplebuilding.fast_chiseling": "Schnelles Meißeln",
+  "enchantment.simplebuilding.constructors_touch": "Berührung des Konstrukteurs",
+  "enchantment.simplebuilding.range": "Reichweite",
 
+  "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
+  "enchantment.simplebuilding.master_builder": "Baumeister",
+  "enchantment.simplebuilding.color_palette": "Farbpalette",
+  "enchantment.simplebuilding.funnel": "Item-Trichter",
+  "enchantment.simplebuilding.quiver": "Köcher",
+  "enchantment.simplebuilding.break_through": "Durchbruch",
+  "enchantment.simplebuilding.ignore_block_type": "Blockart ignorieren",
+  "enchantment.simplebuilding.radius": "Radius",
+  "enchantment.simplebuilding.strip_miner": "Streifenabbau",
+  "enchantment.simplebuilding.surface_place": "Oberflächenbau",
+  "enchantment.simplebuilding.bridge": "Brücke",
+  "enchantment.simplebuilding.line_place": "Linienbau",
 
-  "container.enchantments": "Enchantments",
+  "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
   "enchantment.level.2": "II",
   "enchantment.level.3": "III",
