some clean up, some wand fixes, custom loot tables

--- a/src/main/resources/assets/simplebuilding/lang/en_us.json
+++ b/src/main/resources/assets/simplebuilding/lang/en_us.json
@@ -105,5 +105,15 @@
   "enchantment.level.2": "II",
   "enchantment.level.3": "III",
   "enchantment.level.4": "IV",
-  "enchantment.level.5": "V"
+  "enchantment.level.5": "V",
+
+  "text.autoconfig.simplebuilding.option.tools": "Tool Settings",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Invert Octant Sneak",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.tooltip": "If true, the Octant renders the filled area when NOT sneaking (with Constructor's Touch).",
+
+  "text.autoconfig.simplebuilding.option.worldGen": "World Generation & Economy",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Enable Villager Trades",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Enable Wandering Trader",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Enable Loot Chests",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.tooltip": "Add items to dungeon/structure chests."
 }
