--- a/src/main/resources/assets/simplebuilding/lang/de_de.json
+++ b/src/main/resources/assets/simplebuilding/lang/de_de.json
@@ -1,6 +1,4 @@
 {
-  "item.simplebuilding.building_bundle": "Baubündel",
-  "tooltip.simplebuilding.building_bundle.tooltip": "Ein Bündel, das verschiedene Baumaterialien enthält.",
 
   "item.simplebuilding.stone_chisel": "Steinmeißel",
   "item.simplebuilding.copper_chisel": "Kupfermeißel",
@@ -9,8 +7,8 @@
   "item.simplebuilding.diamond_chisel": "Diamantmeißel",
   "item.simplebuilding.netherite_chisel": "Netheritmeißel",
 
-  "tooltip.simplebuilding.chisel": "Benutzen, um Blöcke zu formen.",
-  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen veränderbaren Block.",
+  "tooltip.simplebuilding.chisel": "Nutzen, um Blöcke zu formen.",
+  "tooltip.simplebuilding.chisel.shift_down": "Rechtsklick auf einen transformierbaren Block.",
 
   "item.simplebuilding.stone_spatula": "Steinspachtel",
   "item.simplebuilding.copper_spatula": "Kupferspachtel",
@@ -19,8 +17,8 @@
   "item.simplebuilding.diamond_spatula": "Diamantspachtel",
   "item.simplebuilding.netherite_spatula": "Netheritspachtel",
 
-  "tooltip.simplebuilding.spatula": "Benutzen, um Blöcke zu glätten.",
-  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen veränderbaren Block.",
+  "tooltip.simplebuilding.spatula": "Nutzen, um Blöcke zu glätten.",
+  "tooltip.simplebuilding.spatula.shift_down": "Rechtsklick auf einen transformierbaren Block.",
 
   "item.simplebuilding.copper_building_core": "Kupferbaukern",
   "item.simplebuilding.iron_building_core": "Eisenbaukern",
@@ -45,9 +43,9 @@
   "item.simplebuilding.diamond_sledgehammer": "Diamantvorschlaghammer",
   "item.simplebuilding.netherite_sledgehammer": "Netheritvorschlaghammer",
 
-  "tooltip.simplebuilding.sledgehammer": "Benutzen, um mehrere Blöcke gleichzeitig abzubauen.",
+  "tooltip.simplebuilding.sledgehammer": "Nutzen, um mehrere Blöcke auf einmal abzubauen.",
 
-  "tooltip.simplebuilding.building_wand": "Benutzen, um mehrere Blöcke auf einmal zu platzieren.",
+  "tooltip.simplebuilding.building_wand": "Nutzen, um mehr Blöcke auf einmal zu platzieren.",
 
   "message.simplebuilding.set_pos1_first": "1:",
   "message.simplebuilding.pos1_set": "1:",
@@ -55,7 +53,7 @@
 
   "item.simplebuilding.octant": "Oktant",
   "item.simplebuilding.octant_white": "Weißer Oktant",
-  "item.simplebuilding.octant_orange": "Orangener Oktant",
+  "item.simplebuilding.octant_orange": "Oranger Oktant",
   "item.simplebuilding.octant_magenta": "Magenta Oktant",
   "item.simplebuilding.octant_light_blue": "Hellblauer Oktant",
   "item.simplebuilding.octant_yellow": "Gelber Oktant",
@@ -72,10 +70,13 @@
   "item.simplebuilding.octant_black": "Schwarzer Oktant",
 
   "item.simplebuilding.reinforced_bundle": "Verstärktes Bündel",
-  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Gegenstände halten, wenn verzaubert.",
+  "tooltip.simplebuilding.reinforced_bundle": "Kann mehr Items halten, wenn verzaubert.",
 
-  "item.simplebuilding.reinforced_shulker_box": "Verstärkte Shulker-Kiste",
-  "tooltip.simplebuilding.reinforced_shulker_box": "Kann mehr Gegenstände halten, wenn verzaubert.",
+  "item.simplebuilding.reinforced_shulker_box": "Verstärkte Shulkerkiste",
+  "tooltip.simplebuilding.reinforced_shulker_box": "Kann mehr Items halten, wenn verzaubert.",
+
+  "item.simplebuilding.speedometer": "Tachometer",
+  "tooltip.simplebuilding.speedometer.tooltip": "Zeigt die Geschwindigkeit des gerittenen Mobs an.",
 
   "itemgroup.simplebuilding.building_items": "Baugegenstände",
 
@@ -86,20 +87,50 @@
   "enchantment.simplebuilding.deep_pockets": "Tiefe Taschen",
   "enchantment.simplebuilding.master_builder": "Baumeister",
   "enchantment.simplebuilding.color_palette": "Farbpalette",
-  "enchantment.simplebuilding.funnel": "Item-Trichter",
+  "enchantment.simplebuilding.funnel": "Gegenstandstrichter",
   "enchantment.simplebuilding.quiver": "Köcher",
   "enchantment.simplebuilding.break_through": "Durchbruch",
-  "enchantment.simplebuilding.ignore_block_type": "Blockart ignorieren",
+  "enchantment.simplebuilding.ignore_block_type": "Blocktyp ignorieren",
   "enchantment.simplebuilding.radius": "Radius",
-  "enchantment.simplebuilding.strip_miner": "Streifenabbau",
-  "enchantment.simplebuilding.surface_place": "Oberflächenbau",
+  "enchantment.simplebuilding.strip_miner": "Streifenminer",
+  "enchantment.simplebuilding.surface_place": "Oberflächenplatzierung",
   "enchantment.simplebuilding.bridge": "Brücke",
-  "enchantment.simplebuilding.line_place": "Linienbau",
+  "enchantment.simplebuilding.line_place": "Linienplatzierung",
+  "enchantment.simplebuilding.swift_ride": "Schneller Ritt",
+  "enchantment.simplebuilding.swift_ride.description": "Erhöht die Geschwindigkeit von gerittenen Mobs.",
+  "enchantment.simplebuilding.horse_jump": "Pferdesprung",
+  "enchantment.simplebuilding.horse_jump.description": "Erhöht die Sprunghöhe von gerittenen Pferden.",
 
   "container.enchantments": "Verzauberungen",
   "enchantment.level.1": "I",
   "enchantment.level.2": "II",
   "enchantment.level.3": "III",
   "enchantment.level.4": "IV",
-  "enchantment.level.5": "V"
+  "enchantment.level.5": "V",
+
+  "text.autoconfig.simplebuilding.option.tools": "Werkzeug-Einstellungen",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak": "Oktant-Schleichen umkehren",
+  "text.autoconfig.simplebuilding.option.tools.invertOctantSneak.tooltip": "Wenn aktiviert, rendert der Oktant den gefüllten Bereich, wenn NICHT geschlichen wird (mit Berührung des Konstrukteurs).",
+
+  "text.autoconfig.simplebuilding.option.worldGen": "Weltgenerierung & Wirtschaft",
+  "text.autoconfig.simplebuilding.option.worldGen.enableVillagerTrades": "Dorfbewohner-Handel aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableWanderingTrades": "Fahrender Händler aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges": "Beutetruhen aktivieren",
+  "text.autoconfig.simplebuilding.option.worldGen.enableLootTableChanges.tooltip": "Fügt Gegenstände zu Dungeon-/Strukturtruhen hinzu.",
+
+  "text.autoconfig.simplebuilding.option.enchantments": "Verzauberungs-Balancing",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide": "Schneller Ritt Einstellungen",
+
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier": "Ghast Geschwindigkeits-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.ghastSpeedMultiplier.tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Happy Ghasts (Standard: 0.40).",
+
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier": "Pferde Geschwindigkeits-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.horseSpeedMultiplier.tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Pferde (Standard: 0.12).",
+
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier": "Andere Mobs Geschwindigkeits-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.swiftRide.otherSpeedMultiplier.tooltip": "Geschwindigkeitsmultiplikator pro Verzauberungsstufe für Schweine/Schreiter (Standard: 0.15).",
+
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump": "Pferdesprung Einstellungen",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier": "Sprungkraft-Boost",
+  "text.autoconfig.simplebuilding.option.enchantments.horseJump.jumpStrengthMultiplier.tooltip": "Sprungkraftmultiplikator pro Verzauberungsstufe auf Pferderüstung (Standard: 0.20)."
 }
